--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: default
 
 steps:
   - name: build
-    image: 18.20.4-alpine3.20
+    image: node:18.20.4-alpine3.20
     commands:
       - npm ci
       - npm run build
