--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@primevue/themes": "^4.1.1",
     "@vueuse/core": "^11.1.0",
     "pinia": "^2.1.7",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
     "vue": "^3.4.29"
