--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,4 @@
+---
 kind: pipeline
 type: kubernetes
 name: default
@@ -39,3 +40,8 @@ trigger:
   event:
     - push
     - promote
+---
+kind: signature
+hmac: 840e9d85c83d5a431b6284dc8085e19716b864d9ad5553581874c586203a6513
+
+...
