--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "sass": "^1.79.4",
     "vite": "^5.3.1",
+    "vite-plugin-pwa": "^0.20.5",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
 }
