--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@primevue/themes": "^4.1.1",
     "@vueuse/core": "^11.1.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^4.1.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
